# src/routes/users.js
@@ -1,22 +1,23 @@
 import express from "express";
 import userController from "../controllers/userController.js";
 import { validateRequest } from "../middleware/validate.js";
+import { authenticate } from "../middleware/authenticate.js";
 import {
-  createUserValidators,
+  signupValidators,
   loginValidators,
 } from "../validations/userValidators.js";
 
 const router = express.Router();
 
 router.post(
-  "/createUser",
-  createUserValidators,
+  "/signup",
+  signupValidators,
   validateRequest,
-  userController.createUser
+  userController.signup
 );
 
 router.post("/login", loginValidators, validateRequest, userController.login);
 
-router.get("/users", userController.listUsers);
+router.get("/users", authenticate, userController.listUsers);
 
 export default router;
